edenter page edit checkbox to radio button

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -46,15 +46,15 @@
 
       <div class="col-md-12">
         <div class="col-md-4">
-        <label for="travel_english"><img src="../../travel_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="checkbox" id="travel_english" name = "travel_english">&nbsp 旅行英会話</a></p></span></span></label>
+        <label for="travel_english"><img src="../../travel_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="travel_english" name = "radioOpt">&nbsp 旅行英会話</a></p></span></span></label>
         </div>
 
         <div class="col-md-4">
-        <label for="idiomatic_expressions" style="font-size:12px;"><img src="../../idiomatic_expressions.png" class="small-icons"><span><p class="small-topic-text" style="font-size: 13px;"><input type="checkbox" id="idiomatic_expressions" name = "idiomatic_expressions">&nbsp 単語/熟語/フレーズ</p></a></span></label>
+        <label for="idiomatic_expressions" style="font-size:12px;"><img src="../../idiomatic_expressions.png" class="small-icons"><span><p class="small-topic-text" style="font-size: 13px;"><input type="radio" id="idiomatic_expressions" name = "radioOpt">&nbsp 単語/熟語/フレーズ</p></a></span></label>
         </div>
 
         <div class="col-md-4">
-        <label for="business_english"><img src="../../business_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="checkbox" id="business_english" name = "business_english">&nbsp ビジネス英語</a></p></span></label>
+        <label for="business_english"><img src="../../business_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="business_english" name = "radioOpt">&nbsp ビジネス英語</a></p></span></label>
         
         </div>
       </div>
@@ -62,15 +62,15 @@
       <div class="col-md-12">
 
         <div class="col-md-4">
-        <label for="daily_english"><img src="../../daily_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="checkbox" id="daily_english" name = "daily_english">&nbsp 日常英会話</a></p></span></label>
+        <label for="daily_english"><img src="../../daily_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="daily_english" name = "radioOpt">&nbsp 日常英会話</a></p></span></label>
         </div>
 
         <div class="col-md-4">
-          <label for="role_playing"><img src="../../role_playing.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="checkbox" id="role_playing" name = "role_playing">&nbsp なりきり英会話</a></p></span></label>
+          <label for="role_playing"><img src="../../role_playing.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="role_playing" name = "radioOpt">&nbsp なりきり英会話</a></p></span></label>
         </div>
 
         <div class="col-md-4">
-          <label for="it_english"><img src="../../it_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="checkbox" id="it_english" name = "it_english">&nbsp IT English</a></p></span></label>
+          <label for="it_english"><img src="../../it_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="it_english" name = "radioOpt">&nbsp IT English</a></p></span></label>
         </div>
 </div>
 <hr/>
