--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -70,7 +70,7 @@
       </div>
       <div class="panel-body">
         <label><%= @totalsafes.count %></label> classes<br/>
-        <label><%= @totalsafes.sum(:time) %></label> mins
+        <!-- <label><%= @totalsafes.sum(:time) %></label> mins -->
       </div>
     </div>
   </div>
