changed name to nick in the show profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,7 @@
       
       
       <div class="col-md-6 text-xs-center">
-      <h1 style="font-size: 300%; font-family: 'Quicksand', sans-serif;"><%= @user.name %></h1>
+      <h1 style="font-size: 300%; font-family: 'Quicksand', sans-serif;">Teacher <%= @user.nick %></h1>
       <hr> 
       <p style="margin-top: 25px;">
       <em><p><%= @user.appeal %></p></em><br/><hr>
