added modal in admin (not yet finished)

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -46,9 +46,9 @@ table area table area -->
 
 <thead>
 
-  <th class="col-md-3">Complete Details</th>
+  <th class="col-md-1">Complete Details</th>
   <th class="col-md-3">名前(name)</th>
-  <th class="col-md-3">メール(mail)</th> 
+  <th class="col-md-5">メール(mail)</th> 
   <th class="col-md-3">権限(auth)</th>
 
 </thead>
@@ -89,7 +89,7 @@ babaw ani ang code sa untitled -->
 </table>
 </div>
 </div>
- <div class="modal fade" id="tablecom" role="dialog">
+ <div class="modal fade bs-example-modal-lg" tabindex="-1" id="tablecom" role="dialog">
     <div class="modal-dialog modal-lg">
     
       <!-- Modal content-->
@@ -103,17 +103,17 @@ babaw ani ang code sa untitled -->
 
             <thead>
 
-            <th class="col-md-3">名前(name)</th>
-            <th class="col-md-3">メール(mail)</th> 
-            <th class="col-md-3">権限(auth)</th>
-            <th class="col-md-2" style="font-size:8px;">ロール(role)</th>
+            <th>名前(name)</th>
+            <th>メール(mail)</th> 
+            <th>権限(auth)</th>
+            <th>ロール(role)</th>
             
-            <th class="col-md-2" style="font-size:8px;">busy</th>
-            <th class="col-md-2" style="font-size:8px;">所持時間(time)</th>
+            <th>busy</th>
+            <th>所持時間(time)</th>
             
-            <th class="col-md-2" style="font-size:8px;">累計授業数(total class)</th>
-            <th class="col-md-2" style="font-size:8px;">累計授業時間(total time)</th>
-            <th colspan="2" class="col-md-3 text-center">Actions</th>
+            <th>累計授業数(total class)</th>
+            <th>累計授業時間(total time)</th>
+            <th colspan="2" class="text-center">Actions</th>
 
             </thead>
 <tbody>
