--- a/app/views/users/new2.html.erb
+++ b/app/views/users/new2.html.erb
@@ -172,7 +172,7 @@ span.input-group-addon i {
               <div class="cols-md-12">
 
                   <div class="checkbox">
-                  <label><input type="checkbox" value="agree" name="agreement" required autofocus>I accept the <a href="#" style="color: blue;" data-toggle="modal" data-target="#agreement">Terms & Conditions</a> of the company. </label>
+                  <label><input required type="checkbox" value="agree" name="agreement" required autofocus>I accept the <a href="#" style="color: blue;" data-toggle="modal" data-target="#agreement">Terms & Conditions</a> of the company. </label>
                     
                   </div>
 
