--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -81,15 +81,18 @@
 										
 														
 							<% else %>
-												<figure class="mono" style="opacity: 0.5;">
-													<img src="<%= user.picture %>"/>
+								<figure class="effect-jazz mono" style="opacity: 1;">
+							<img src="<%= user.picture %>" style="padding: 5px; background: -moz-radial-gradient(50% 50%, #fff, #fff);background: -webkit-radial-gradient(50% 50%, #fff, #fff); background: -o-radial-gradient(50% 50%, #fff, #fff); background: -ms-radial-gradient(50% 50%, #fff, #fff); background: radial-gradient(50% 50%, #fff, #fff)" />
 												<div class="cover-text text-center">
 													<p style="color: #fff;"></p>
 												</div>
 													<figcaption style="margin-top:20px;">
 														<h2 style="font-family: 'Gloria Hallelujah', cursive; font-weight: 100; font-size:10px;"><span style="font-size:20px;">Sorry...</span><br><br><br> I'm currently offline!</h2>
-													</figcaption>
-												</figure>
+							<%= link_to user_path(user) , :class => "" , :style => "color:black;" do %>
+	                       show more
+	                       <% end %>
+									</figcaption>
+								</figure>
 							<% end %>
 							<% end %>
 						</div>
