--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -101,6 +101,12 @@
 
        <a href="#" class="btn btn-primary" style="color: #fff;">Yes Call Me Back!</a>
 
+       <% elsif @user.busy == "busy" %>
+
+       <p>Sorry I'm currently offline. Please check other Online Teachers, they will be happy to teach you as well!</p>
+
+       <a href="/" class="btn btn-primary" style="color: #fff;">Back</a>
+
        <% else %>
        
          <% if current_user.time <= 25 %>
