--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -62,7 +62,23 @@
       </div>
     </div>
 
+    <div class="panel panel-danger">
+
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-bullhorn"></span>Notice</h2>
+      </div>
+      <div class="panel-body">
+      <div class="radio" style="margin-bottom: 10px;">
+      <% if @student_name.present? %>
+      <% @student_name.each do |s| %>
+      <p>Please prepare, student <span style="color:red; font-weight:bold"><%= s.student %></span> is viewing your profile.</p>
+      <% end %>
+      </div>
+      <% end %>
+      </div>
+    </div>
   </div>
+
   <div class="col-md-3">
     <div class="panel panel-success">
       <div class="panel-heading">
@@ -188,6 +204,6 @@
 </div>
 </div>
 </div>
-<%= paginate @safes %>
+<%#= paginate @safes %>
 
 </div>
