--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -46,15 +46,16 @@
 
       <div class="col-md-12">
         <div class="col-md-4">
-        <label for="travel_english"><img src="../../travel_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="travel_english" name = "radioOpt">&nbsp 旅行英会話</a></p></span></span></label>
+
+        <label for="travel_english"><img src="../../travel_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="travel_english" name = "radioOpt" onclick="window.open('http://esl.web-mech.net/course/view.php?id=12')">&nbsp 旅行英会話</p></a></span></span></label>
         </div>
 
         <div class="col-md-4">
-        <label for="idiomatic_expressions" style="font-size:12px;"><img src="../../idiomatic_expressions.png" class="small-icons"><span><p class="small-topic-text" style="font-size: 13px;"><input type="radio" id="idiomatic_expressions" name = "radioOpt">&nbsp 単語/熟語/フレーズ</p></a></span></label>
+        <label for="idiomatic_expressions" style="font-size:12px;"><img src="../../idiomatic_expressions.png" class="small-icons"><span><p class="small-topic-text" style="font-size: 13px;"><input type="radio" id="idiomatic_expressions" name = "radioOpt" onclick="window.open('#')">&nbsp 単語/熟語/フレーズ</p></a></span></label>
         </div>
 
         <div class="col-md-4">
-        <label for="business_english"><img src="../../business_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="business_english" name = "radioOpt">&nbsp ビジネス英語</a></p></span></label>
+        <label for="business_english"><img src="../../business_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="business_english" name = "radioOpt" onclick="window.open('http://esl.web-mech.net/course/view.php?id=8')">&nbsp ビジネス英語</a></p></span></label>
         
         </div>
       </div>
@@ -62,15 +63,15 @@
       <div class="col-md-12">
 
         <div class="col-md-4">
-        <label for="daily_english"><img src="../../daily_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="daily_english" name = "radioOpt">&nbsp 日常英会話</a></p></span></label>
+        <label for="daily_english"><img src="../../daily_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="daily_english" name = "radioOpt" onclick="window.open('http://esl.web-mech.net/course/view.php?id=2')">&nbsp 日常英会話</a></p></span></label>
         </div>
 
         <div class="col-md-4">
-          <label for="role_playing"><img src="../../role_playing.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="role_playing" name = "radioOpt">&nbsp なりきり英会話</a></p></span></label>
+          <label for="role_playing"><img src="../../role_playing.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="role_playing" name = "radioOpt" onclick="window.open('#')">&nbsp なりきり英会話</a></p></span></label>
         </div>
 
         <div class="col-md-4">
-          <label for="it_english"><img src="../../it_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="it_english" name = "radioOpt">&nbsp IT English</a></p></span></label>
+          <label for="it_english"><img src="../../it_english.png" class="small-icons"><span style="font-size:15px;"><p class="small-topic-text"><input type="radio" id="it_english" name = "radioOpt" onclick="window.open('http://esl.web-mech.net/course/view.php?id=6')">&nbsp IT English</a></p></span></label>
         </div>
 </div>
 <hr/>
