changed complete name to nick name in end enter page

--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -32,7 +32,7 @@
 <div class="container text-center">
 
 
-      <h2 style="font-family: 'Work Sans', sans-serif;" class="small_font">ハロー！<strong><%= @user.name %></strong> です！. <br>私を選んでくれてありがとう！</h2>
+      <h2 style="font-family: 'Work Sans', sans-serif;" class="small_font">ハロー！<strong><%= @user.nick %></strong> です！. <br>私を選んでくれてありがとう！</h2>
       <hr>
 
 <div class="col-md-6">
