--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -127,8 +127,8 @@
 
       </div>
       <div class="panel-body">
-      	 <% @students_online.each do |u| %>
       	<div class="col-md-3" style="border: 1px solid #ccc;">
+      		   <% @students_online.each do |u| %>
       	       <% if u.last_seen_at.present?
       	       		if u.last_seen_at > 5.minutes.ago %>
       	       		<img src="<%= u.picture %>" style="width: 100px;" class="center-block">
@@ -147,17 +147,31 @@
 
       </div>
       <div class="panel-body">
-      	<% @teachers_online.each do |u| %>
-       		      	<% if u.last_seen_at.present?
-      	       			if u.last_seen_at > 5.minutes.ago %>
-      	       		<div class="col-md-3" style="border: 1px solid #ccc;">
-      	            <img src="<%= u.picture %>" style="width: 100px;" class="center-block">
-      	       		<p class="text-center"><%= u.name %></p>
+      	<% @teachers_online.each do |user| %>
+      	<div class="col-md-3" style="border: 1px solid #ccc;">
+      		      	<%= link_to user_path(user) , :class => "" , :style => "color:black;" do %>    
+      	            <img src="<%= user.picture %>" style="width: 100px;" class="center-block">
+      	       		<p class="text-center">Teacher: <%= user.nick %></p>
       	       		<% end %>
-       		<% end %>
-
+      	       	</div>
+      	   <% end %>
        </div>
-       	<% end %>
+      </div>
+
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>All Teachers Registered</h2>
+      </div>
+      <div class="panel-body">
+      	<% @users.each do |user| %>
+      	<div class="col-md-3" style="border: 1px solid #ccc;">
+      		      	<%= link_to user_path(user) , :class => "" , :style => "color:black;" do %>    
+      	            <img src="<%= user.picture %>" style="width: 100px;" class="center-block">
+      	       		<p class="text-center">Teacher: <%= user.nick %></p>
+      	       		<% end %>
+      	       	</div>
+      	   <% end %>
+       </div>
       </div>
     </div>
   </div>
