--- a/app/views/safes/edit.html.erb
+++ b/app/views/safes/edit.html.erb
@@ -25,18 +25,12 @@
       	</div>
       	<hr/>
       	<div class="row">
-      		<div class="col-sm-2">
+      		<div class="col-sm-12">
       		<div class="form-group">
-              <label for="user_skill" class="hidden-xs">Call Duration</label>
-                <div class="input-group">
-                  <select class="form-control" name="safe[time]" required>
-                    <option value="30 mins">30 mins</option>
-                    <option value="60 mins">60 mins</option>
-                    <option value="90 mins">90 mins</option>
-                    <option value="120 mins">120 mins</option>
-                    <option value="150 mins">150 mins</option>
-                    <option value="180 mins">180 mins</option>
-                  </select>
+            <label for="safe_time" style="margin-top: 10px;">Duration of call<span style="color:red; font-weight: bold;">*</span><small>(mins)（Should be in minutes, example 1 hour 15 mins ~ 75)</small></label>
+              <%= f.text_field :time , :placeholder => 'in minutes', class: 'form-control' , :style => ''%>
+
+
               </div>
             </div>
       		</div>
