fixed time incentive time frame

--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -28,8 +28,8 @@
       </div>
       <div class="panel-body">
         <% @time_in.each do |t| 
-          if Time.now.hour >= 9 %>
-        <p style="color:green;"><strong>Time In:</strong> <%= t.time_in.strftime("%I:%M%p") %> <br>Incentive Time is ACTIVE</p>
+          if Time.now.hour >= 19 %>
+        <p style="color:green;"><strong>Time In:</strong> <%= t.time_in.strftime("%I:%M%p") %></p>
         <% else %>
         <p><strong>Time In:</strong> <%= t.time_in.strftime("%I:%M%p") %></p>
           <% end %>
@@ -37,6 +37,7 @@
         <% @time_out.each do |t| %>
         <p><strong>Time Out: </strong><%= t.time_out.strftime("%I:%M%p") %></p>
         <% end %>
+        <p style="color:red; !important;"><small>Incentive Time. Make sure Login time is 6PM to earn incentive.</small></p>
       </div>
 
   </div>
