--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -37,7 +37,9 @@
         <% @time_out.each do |t| %>
         <p><strong>Time Out: </strong><%= t.time_out.strftime("%I:%M%p") %></p>
         <% end %>
+        <% if Time.now.hour >= 19 %>
         <p style="color:red; !important;"><small>Incentive Time. Make sure Login time is 6PM to earn incentive.</small></p>
+        <% end %>
       </div>
 
   </div>
