updated announcement, added student account for teachers

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -118,6 +118,12 @@
       <div class="panel-body">
       <h3>Welcome To Timee!</h3>
       <p>Welcome and thank you for joining timee. We make timee simple and easy to use for teachers and students. If you have any questions, concerns or feedbacks, please let us know by clicking the Contact Us button below.</p>
+
+      <p>For those who want to check how your profile looks in the students side. You can login using a test student account.<br><br>
+      <strong>Username: student@web-mech.net</strong><br>
+      <strong>Password: student1234</strong>
+  	  </p>
+
      	</div>
   	</div>
 
