--- a/app/views/users/new2.html.erb
+++ b/app/views/users/new2.html.erb
@@ -6,6 +6,12 @@
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta charset="utf-8"/>
+    <meta name="keywords" content="ESL School Online"/>
+    <meta name="description" content="Timee is a portal for students to learn on demand and teachers to earn. Timee simplify the
+process where students don’t need to schedule a class ahead of time, making the system
+“on demand” for students.
+"/>
   </div>
 
 <style>
